; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_expprint.c_print_subexp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_expprint.c_print_subexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expression = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.expression*, i32*, %struct.ui_file*, i32)* }
%struct.ui_file = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_subexp(%struct.expression* %0, i32* %1, %struct.ui_file* %2, i32 %3) #0 {
  %5 = alloca %struct.expression*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ui_file*, align 8
  %8 = alloca i32, align 4
  store %struct.expression* %0, %struct.expression** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.ui_file* %2, %struct.ui_file** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.expression*, %struct.expression** %5, align 8
  %10 = getelementptr inbounds %struct.expression, %struct.expression* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32 (%struct.expression*, i32*, %struct.ui_file*, i32)*, i32 (%struct.expression*, i32*, %struct.ui_file*, i32)** %14, align 8
  %16 = load %struct.expression*, %struct.expression** %5, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load %struct.ui_file*, %struct.ui_file** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i32 %15(%struct.expression* %16, i32* %17, %struct.ui_file* %18, i32 %19)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
